apps/memos/memos.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
spec:
  type: ClusterIP
  selector:
    app: memos
  ports:
    - port: 5230
      targetPort: 5230
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: memos
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: sqlite-storage
              mountPath: /var/opt/memos
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: memos-sqlite-pvc
