apps/memos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
  namespace: memos
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "memos.int.kyledev.co"
  rules:
    - backendRefs:
        - name: memos
          port: 5230
